<resources>
    <string name="app_name">DdnTemp</string>
    <string name="link">连接</string>
    <string name="play">播放</string>
    <string name="stop">停止</string>
    <string name="dislink">断开</string>
    <string name="rotate">旋转</string>
    <string name="save_pic">存图</string>
    <string name="camera_list">相机列表</string>
    <string name="selected_device_text">相机：</string>
    <string name="writeSDPermission">获取写SD卡权限</string>
    <string name="permissionAllowedOrNo">访问权限已被禁止，是否打开？</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
