<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 巨哥热成像显示-->
<LinearLayout
    android:id="@+id/videoLayout"
    android:orientation="vertical"
    android:layout_width="0dp"
    android:layout_weight="2"
    android:layout_height="match_parent">

</LinearLayout>
    <!-- 人像摄像头显示-->
    <LinearLayout
        android:id="@+id/CameraLayout"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent">
        <!-- 显示预览的图像 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <SurfaceView
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <SurfaceView
                android:id="@+id/face"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

    </LinearLayout>
    <!-- 热成像仪器列表和操作按钮-->
    <LinearLayout
        android:id="@+id/Button_Layout"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/listDev"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            ></ListView>
        <TextView
            android:text="@string/selected_device_text"
            android:id="@+id/tvSelectedName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btnLink"
                    android:text="@string/link"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <Button

                    android:id="@+id/btnStop"
                    android:text="@string/stop"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnRotate"
                    android:text="@string/rotate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnPlay"
                    android:text="@string/play"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnDislink"
                    android:text="@string/dislink"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btnSavePic"
                    android:text="@string/save_pic"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>