<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="cn.com.magnity.coresdksample.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/videoLayout">

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btnLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/link"
        app:layout_constraintLeft_toRightOf="@+id/listDev"
        app:layout_constraintRight_toLeftOf="@+id/btnPlay"
        app:layout_constraintTop_toTopOf="@+id/listDev"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="@+id/btnLink"
        app:layout_constraintLeft_toRightOf="@+id/btnLink"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnLink" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/stop"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/listDev"
        app:layout_constraintRight_toLeftOf="@+id/btnDislink"
        app:layout_constraintTop_toBottomOf="@+id/btnLink" />

    <Button
        android:id="@+id/btnDislink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dislink"
        app:layout_constraintBottom_toBottomOf="@+id/btnStop"
        app:layout_constraintLeft_toRightOf="@+id/btnStop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnStop" />

    <Button
        android:id="@+id/btnSavePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_pic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnRotate"
        app:layout_constraintTop_toTopOf="@+id/btnRotate"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnRotate"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_list"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/videoLayout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/btnRotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        app:layout_constraintRight_toLeftOf="@+id/btnSavePic"
        app:layout_constraintLeft_toRightOf="@+id/listDev"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnStop" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_device_text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toRightOf="@+id/listDev"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvSelectedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintLeft_toRightOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/listDev"
        android:layout_width="161dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#ffcccccc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
